@@ -1,18 +1,16 @@
 /*
- * SPDX-FileCopyrightText: 2021 Atos, 2024 Lifely
+ * SPDX-FileCopyrightText: 2021 Atos, 2024 Dimpact
  * SPDX-License-Identifier: EUPL-1.2+
  */
 
 package net.atos.zac.flowable.bpmn;
 
 import static net.atos.client.zgw.shared.util.URIUtil.parseUUIDFromResourceURI;
-import static net.atos.zac.flowable.ZaakVariabelenService.VAR_ZAAKTYPE_OMSCHRIJVING;
-import static net.atos.zac.flowable.ZaakVariabelenService.VAR_ZAAKTYPE_UUUID;
-import static net.atos.zac.flowable.ZaakVariabelenService.VAR_ZAAK_IDENTIFICATIE;
-import static net.atos.zac.flowable.ZaakVariabelenService.VAR_ZAAK_UUID;
+import static net.atos.zac.flowable.ZaakVariabelenService.*;
 
 import java.io.InputStream;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.logging.Logger;
@@ -21,7 +19,6 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 
-import org.flowable.common.engine.api.FlowableObjectNotFoundException;
 import org.flowable.engine.ProcessEngine;
 import org.flowable.engine.RepositoryService;
 import org.flowable.engine.RuntimeService;
@@ -59,18 +56,24 @@ public class BPMNService {
                         processEngineConfiguration.getLabelFontName(),
                         processEngineConfiguration.getAnnotationFontName(),
                         processEngineConfiguration.getClassLoader(), 1.0,
-                        processEngineConfiguration.isDrawSequenceFlowNameWithNoLabelDI());
+                        processEngineConfiguration.isDrawSequenceFlowNameWithNoLabelDI()
+                );
     }
 
     public boolean isProcesGestuurd(final UUID zaakUUID) {
         return findProcessInstance(zaakUUID) != null;
     }
 
-    public ProcessDefinition readProcessDefinitionByprocessDefinitionKey(final String processDefinitionKey) {
-        final ProcessDefinition processDefinition = repositoryService.createProcessDefinitionQuery()
+    public ProcessDefinition findProcessDefinitionByprocessDefinitionKey(final String processDefinitionKey) {
+        return repositoryService.createProcessDefinitionQuery()
                 .processDefinitionKey(processDefinitionKey)
+                .active()
                 .latestVersion()
                 .singleResult();
+    }
+
+    public ProcessDefinition readProcessDefinitionByprocessDefinitionKey(final String processDefinitionKey) {
+        final ProcessDefinition processDefinition = findProcessDefinitionByprocessDefinitionKey(processDefinitionKey);
         if (processDefinition != null) {
             return processDefinition;
         } else {
@@ -83,24 +86,44 @@ public class BPMNService {
     public void startProcess(
             final Zaak zaak,
             final ZaakType zaaktype,
-            final Map<String, Object> zaakData,
-            final String processDefinitionKey
+            Map<String, Object> zaakData
     ) {
-        try {
-            runtimeService.createProcessInstanceBuilder()
-                    .processDefinitionKey(processDefinitionKey)
-                    .businessKey(zaak.getUuid().toString())
-                    .variable(VAR_ZAAK_UUID, zaak.getUuid())
-                    .variable(VAR_ZAAK_IDENTIFICATIE, zaak.getIdentificatie())
-                    .variable(VAR_ZAAKTYPE_UUUID, parseUUIDFromResourceURI(zaaktype.getUrl()))
-                    .variable(VAR_ZAAKTYPE_OMSCHRIJVING, zaaktype.getOmschrijving())
-                    .variables(zaakData)
-                    .start();
-            LOG.info("Zaak %s gestart met BPMN model '%s'".formatted(zaak.getUuid(), processDefinitionKey));
-        } catch (final FlowableObjectNotFoundException flowableObjectNotFoundException) {
-            LOG.severe("Zaak %s niet gestart omdat BPMN model '%s' niet bestaat"
-                    .formatted(zaak.getUuid(), processDefinitionKey));
+        final var processDefinitionKey = zaaktype.getReferentieproces().getNaam();
+        LOG.info(() -> String.format("Starting zaak '%s' using BPMN model '%s'", zaak.getUuid(), processDefinitionKey));
+        if (zaakData == null) {
+            zaakData = Collections.emptyMap();
         }
+        runtimeService.createProcessInstanceBuilder()
+                .processDefinitionKey(processDefinitionKey)
+                .businessKey(zaak.getUuid().toString())
+                .variable(VAR_ZAAK_UUID, zaak.getUuid())
+                .variable(VAR_ZAAK_IDENTIFICATIE, zaak.getIdentificatie())
+                .variable(VAR_ZAAKTYPE_UUUID, parseUUIDFromResourceURI(zaaktype.getUrl()))
+                .variable(VAR_ZAAKTYPE_OMSCHRIJVING, zaaktype.getOmschrijving())
+                .variables(zaakData)
+                .start();
+    }
+
+    public List<ProcessDefinition> listProcessDefinitions() {
+        return repositoryService.createProcessDefinitionQuery()
+                .latestVersion()
+                .orderByProcessDefinitionName().asc()
+                .list();
+    }
+
+    public void addProcessDefinition(final String filename, final String processDefinitionContent) {
+        repositoryService.createDeployment()
+                .addString(filename, processDefinitionContent)
+                .name(filename)
+                .enableDuplicateFiltering()
+                .deploy();
+    }
+
+    public void deleteProcessDefinition(final String processDefinitionKey) {
+        repositoryService.createDeploymentQuery()
+                .processDefinitionKey(processDefinitionKey)
+                .list()
+                .forEach(deployment -> repositoryService.deleteDeployment(deployment.getId(), true));
     }
 
     private ProcessInstance findProcessInstance(final UUID zaakUUID) {
